--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.10",
+    "chart.js": "^4.4.7",
     "express": "^4.18.2",
+    "ng2-charts": "^7.0.0",
     "quiz-app-frontend": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
